# pyodide-react-build-demo

./: package-lock.json  package.json
public/: index.html  pyodide_react_demo-0.1.0-py3-none-any.whl
pyodide/: pyproject.toml
pyodide/pyodide_react_demo/: __init__.py
pyodide/pyodide_react_demo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyodide/pyodide_react_demo/react/: __init__.py  components.py  decorator.py
src/: index.js  loader.py  pyodide_react_demo-0.1.0-py3-none-any.whl
